client/less/footer.less
/*
 * client/less/footer.less
 */

#footer {
  height: @navbar-height;
  background-color: #e0e0e0;

  .container .credit {
    margin: 15px 0;
    color: #888;
    text-align: center;
  }

  @media (max-width: 767px) {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
  }
}

